Temporarily fixed missing scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -154,8 +154,10 @@
     float: left;
 }
 
-.NodeList {
+.ItemList {
     flex: 1;
+    min-height: 0;
+    overflow-y: auto;
 }
 
 .Subscriber {
